<resources>
    <string name="app_name">Flags</string>
    <string name="quiz_app">Quiz App</string>
    <string name="welcome">Welcome</string>
    <string name="name1">Name</string>
    <string name="start">Start</string>
    <string name="image_flage">Image Flage</string>
    <string name="check">Check</string>
    <string name="result">Result</string>
    <string name="congratulations">Congratulations!</string>
    <string name="Finish">Finish</string>
</resources>